--- a/AppHelp/app/src/main/res/layout/activity_cadastro.xml
+++ b/AppHelp/app/src/main/res/layout/activity_cadastro.xml
@@ -7,8 +7,10 @@
     tools:context="es.inatel.br.apphelp.CadastroActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,12 +18,84 @@
             android:layout_centerHorizontal="true"
             android:orientation="vertical">
 
-            <TextView
+            <!--Cabecalho da tela-->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cadastro"
-                android:textAlignment="center"
-                android:textSize="40sp" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="@dimen/largura_foto_perfil"
+                        android:layout_height="@dimen/altura_foto_perfil"
+                        android:src="@drawable/boneco_perfil"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Adicionar Foto"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Cadastro"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/cabecalho"
+                    android:gravity="center"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="20dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tipo de usuario: "
+                    android:textSize="20dp"/>
+
+                <RadioGroup
+                    android:id="@+id/group"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/radioAlunoCadastroID"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Aluno"
+                        android:layout_margin="5dp"/>
+
+                    <RadioButton
+                        android:id="@+id/radioAdmCadastroID"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Administrador"
+                        android:layout_margin="5dp"/>
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <!-- Componentes principais da tela -->
+            <EditText
+                android:id="@+id/nomeCadastroID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:hint="Nome"
+                android:inputType="textPersonName"/>
 
             <EditText
                 android:id="@+id/emailCadastroID"
@@ -47,49 +121,97 @@
                 android:hint="Confirmar Senha"
                 android:inputType="textPassword" />
 
+            <EditText
+                android:id="@+id/telefoneContatoID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:hint="Telefone para contato"
+                android:inputType="phone"/>
+
+            <!--Componentes especificos de usuario-->
+            <LinearLayout
+                android:id="@+id/viewSwitcherID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <!--View Cadastro Alunos-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/cursoID"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:hint="Curso"
+                        android:inputType="textPersonName"
+                        android:visibility="gone"/>
+
+                    <EditText
+                        android:id="@+id/periodoID"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:hint="Período"
+                        android:inputType="textPersonName"
+                        android:visibility="gone"/>
+
+                    <EditText
+                        android:id="@+id/matriculaID"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:hint="Matrícula"
+                        android:inputType="textPersonName"
+                        android:visibility="gone"/>
+                </LinearLayout>
+
+                <!--View Cadastro Administrador-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/ocupacaoID"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:hint="Ocupação"
+                        android:inputType="textPersonName"
+                        android:visibility="gone"/>
+
+                    <EditText
+                        android:id="@+id/atividadeRespID"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:hint="Atividade de sua responsabilidade"
+                        android:inputType="textPersonName"
+                        android:visibility="gone"/>
+                </LinearLayout>
+            </LinearLayout>
+
+
             <TextView
                 android:id="@+id/erroCadastroID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_red_light"
-                android:visibility="invisible" />
-
-            <RadioGroup
-                android:id="@+id/group"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="20dp">
-
-                <RadioButton
-                    android:id="@+id/radioAlunoCadastroID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Aluno"
-                    android:layout_margin="5dp"/>
-
-                <RadioButton
-                    android:id="@+id/radioAdmCadastroID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Administrador"
-                    android:layout_margin="5dp"/>
-
-            </RadioGroup>
+                android:visibility="invisible"/>
 
             <Button
                 android:id="@+id/botaoCadastrarID"
-                android:layout_width="match_parent"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginBottom="20dp"
-                android:text="Cadastrar" />
+                android:text="Cadastrar"/>
 
 
         </LinearLayout>
