Modelo DAO aplicado

--- a/AppHelp/app/src/main/res/layout/activity_criar_atividade.xml
+++ b/AppHelp/app/src/main/res/layout/activity_criar_atividade.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.inatel.br.apphelp.CriarAtividade">
+    tools:context="es.inatel.br.apphelp.CriarAtividadeActivity">
 
     <ScrollView
         android:layout_width="368dp"
