--- a/AppHelp/app/src/main/res/layout/activity_login.xml
+++ b/AppHelp/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,10 @@
     tools:context="es.inatel.br.apphelp.LoginActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
