--- a/AppHelp/app/src/main/res/layout/activity_criar_atividade.xml
+++ b/AppHelp/app/src/main/res/layout/activity_criar_atividade.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="es.inatel.br.apphelp.CriarAtividadeActivity">
+    tools:context="es.inatel.br.apphelp.control.CriarAtividadeActivity">
 
     <ScrollView
         android:layout_width="368dp"
@@ -77,6 +77,7 @@
                     android:textSize="22sp"/>
 
                 <Spinner
+                    android:id="@+id/tipoID"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                 </Spinner>
@@ -95,9 +96,11 @@
                     android:text="Numero de alunos: "
                     android:textSize="22sp"/>
 
-                <Spinner
+                <EditText
+                    android:inputType="number"
+                    android:id="@+id/numAlunosID"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"></Spinner>
+                    android:layout_height="wrap_content"></EditText>
 
             </LinearLayout>
 
@@ -114,6 +117,7 @@
                     android:textSize="22sp"/>
 
                 <Spinner
+                    android:id="@+id/tempoID"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"></Spinner>
             </LinearLayout>
