--- a/AppHelp/app/src/main/res/layout/activity_perfil.xml
+++ b/AppHelp/app/src/main/res/layout/activity_perfil.xml
@@ -194,7 +194,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="@string/salvar"
+                        android:text="@string/continuar"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent" />
                     </android.support.constraint.ConstraintLayout>
