--- a/AppHelp/app/src/main/res/layout/activity_horarios.xml
+++ b/AppHelp/app/src/main/res/layout/activity_horarios.xml
@@ -8,18 +8,18 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal">
 
 
                 <LinearLayout
@@ -31,22 +31,22 @@
                         android:id="@+id/fotoID"
                         android:layout_width="140dp"
                         android:layout_height="120dp"
-                        android:src="@drawable/boneco_perfil"/>
+                        android:src="@drawable/boneco_perfil" />
 
                     <TextView
                         android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:text="Nome: "
-                        android:textSize="18sp"/>
+                        android:textSize="18sp" />
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center"
                     android:text="Horários"
                     android:textAlignment="center"
-                    android:textSize="@dimen/cabecalho"
-                    android:gravity="center" />
+                    android:textSize="@dimen/cabecalho" />
             </LinearLayout>
 
             <android.support.constraint.ConstraintLayout
@@ -59,98 +59,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginTop="8dp"
                     android:text="@string/criar"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <Button
-                    android:id="@+id/editarHorarioID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/editar"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/excluirHorarioID"
-                    app:layout_constraintStart_toEndOf="@+id/criarHorarioID"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <Button
-                    android:id="@+id/excluirHorarioID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/excluir"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
+            <ExpandableListView
+                android:id="@+id/lvExp"
+                android:layout_width="match_parent"
+                android:layout_height="319dp"></ExpandableListView>
 
-                <TextView
-                    android:text="@string/segunda_feira"
-                    style="@style/textViewHorario"/>
-
-                <ListView
-                    android:id="@+id/listSegundaID"
-                    style="@style/listViewHorario"
-                    android:layout_height="match_parent">
-                </ListView>
-
-                <TextView
-                    android:text="@string/terca_feira"
-                    style="@style/textViewHorario"/>
-
-                <ListView
-                    android:id="@+id/listTercaID"
-                    style="@style/listViewHorario">
-                </ListView>
-
-                <TextView
-                    style="@style/textViewHorario"
-                    android:text="@string/quarta_feira"/>
-
-                <ListView
-                    android:id="@+id/listQuartaID"
-                    style="@style/listViewHorario">
-                </ListView>
-
-                <TextView
-                    style="@style/textViewHorario"
-                    android:text="@string/quinta_feira"/>
-
-                <ListView
-                    android:id="@+id/listQuintaID"
-                    style="@style/listViewHorario">
-                </ListView>
-
-                <TextView
-                    style="@style/textViewHorario"
-                    android:text="@string/sexta_feira"/>
-
-                <ListView
-                    android:id="@+id/listSextaID"
-                    style="@style/listViewHorario">
-                </ListView>
-
-                <TextView
-                    style="@style/textViewHorario"
-                    android:text="@string/sabado"/>
-
-                <ListView
-                    android:id="@+id/listSabadoID"
-                    style="@style/listViewHorario">
-                </ListView>
 
         </LinearLayout>
     </ScrollView>
