--- a/AppHelp/app/src/main/res/layout/activity_cadastro.xml
+++ b/AppHelp/app/src/main/res/layout/activity_cadastro.xml
@@ -7,7 +7,7 @@
     tools:context="es.inatel.br.apphelp.control.CadastroActivity">
 
     <ScrollView
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="8dp">
@@ -44,12 +44,9 @@
 
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    style="@style/textViewCabecalho"
                     android:text="Cadastro"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/cabecalho"
-                    android:gravity="center"/>
+                    android:layout_gravity="center"/>
             </LinearLayout>
 
             <LinearLayout
@@ -91,41 +88,31 @@
             <!-- Componentes principais da tela -->
             <EditText
                 android:id="@+id/nomeCadastroID"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                style="@style/editText"
                 android:hint="Nome"
                 android:inputType="textPersonName"/>
 
             <EditText
                 android:id="@+id/emailCadastroID"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                style="@style/editText"
                 android:hint="Email"
                 android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/senhaCadastroID"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                style="@style/editText"
                 android:hint="Senha"
                 android:inputType="textPassword" />
 
             <EditText
                 android:id="@+id/confirmarSenhaCadastroID"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                style="@style/editText"
                 android:hint="Confirmar Senha"
                 android:inputType="textPassword" />
 
             <EditText
                 android:id="@+id/telefoneContatoID"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                style="@style/editText"
                 android:hint="Telefone para contato"
                 android:inputType="phone"/>
 
@@ -145,27 +132,21 @@
 
                     <EditText
                         android:id="@+id/cursoID"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
+                        style="@style/editText"
                         android:hint="Curso"
                         android:inputType="textPersonName"
                         android:visibility="gone"/>
 
                     <EditText
                         android:id="@+id/periodoID"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
+                        style="@style/editText"
                         android:hint="Período"
                         android:inputType="textPersonName"
                         android:visibility="gone"/>
 
                     <EditText
                         android:id="@+id/matriculaID"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
+                        style="@style/editText"
                         android:hint="Matrícula"
                         android:inputType="textPersonName"
                         android:visibility="gone"/>
@@ -179,18 +160,14 @@
 
                     <EditText
                         android:id="@+id/ocupacaoID"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
+                        style="@style/editText"
                         android:hint="Ocupação"
                         android:inputType="textPersonName"
                         android:visibility="gone"/>
 
                     <EditText
                         android:id="@+id/atividadeRespID"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
+                        style="@style/editText"
                         android:hint="Atividade de sua responsabilidade"
                         android:inputType="textPersonName"
                         android:visibility="gone"/>
@@ -200,20 +177,12 @@
 
             <TextView
                 android:id="@+id/erroCadastroID"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@android:color/holo_red_light"
-                android:visibility="invisible"/>
+                style="@style/mensagem_erro"/>
 
             <Button
                 android:id="@+id/botaoCadastrarID"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                style="@style/botoes"
                 android:text="Cadastrar"/>
-
-
         </LinearLayout>
     </ScrollView>
 
