--- a/AppHelp/app/src/main/res/layout/activity_cadastro.xml
+++ b/AppHelp/app/src/main/res/layout/activity_cadastro.xml
@@ -7,10 +7,10 @@
     tools:context="es.inatel.br.apphelp.control.CadastroActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,8 +22,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -33,54 +33,57 @@
                     <ImageView
                         android:layout_width="@dimen/largura_foto_perfil"
                         android:layout_height="@dimen/altura_foto_perfil"
-                        android:src="@drawable/boneco_perfil"/>
+                        android:src="@drawable/boneco_perfil" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Adicionar Foto"
-                        android:textSize="20sp"/>
+                        android:textSize="20sp" />
                 </LinearLayout>
 
 
                 <TextView
-                    style="@style/textViewCabecalho"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:text="Cadastro"
-                    android:layout_gravity="center"/>
+                    android:textAlignment="center"
+                    android:textSize="@dimen/cabecalho" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tipo de usuario: "
-                    android:textSize="20dp"/>
+                    android:textSize="20dp" />
 
                 <RadioGroup
                     android:id="@+id/group"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/radioAlunoCadastroID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Aluno"
-                        android:layout_margin="5dp"/>
+                        android:layout_margin="5dp"
+                        android:text="Aluno" />
 
                     <RadioButton
                         android:id="@+id/radioAdmCadastroID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Administrador"
-                        android:layout_margin="5dp"/>
+                        android:layout_margin="5dp"
+                        android:text="Administrador" />
 
                 </RadioGroup>
             </LinearLayout>
@@ -88,33 +91,43 @@
             <!-- Componentes principais da tela -->
             <EditText
                 android:id="@+id/nomeCadastroID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:hint="Nome"
-                android:inputType="textPersonName"/>
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/emailCadastroID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:hint="Email"
                 android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/senhaCadastroID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:hint="Senha"
                 android:inputType="textPassword" />
 
             <EditText
                 android:id="@+id/confirmarSenhaCadastroID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:hint="Confirmar Senha"
                 android:inputType="textPassword" />
 
             <EditText
                 android:id="@+id/telefoneContatoID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:hint="Telefone para contato"
-                android:inputType="phone"/>
+                android:inputType="phone" />
 
             <!--Componentes especificos de usuario-->
             <LinearLayout
@@ -132,24 +145,30 @@
 
                     <EditText
                         android:id="@+id/cursoID"
-                        style="@style/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
                         android:hint="Curso"
                         android:inputType="textPersonName"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:id="@+id/periodoID"
-                        style="@style/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
                         android:hint="Período"
                         android:inputType="textPersonName"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:id="@+id/matriculaID"
-                        style="@style/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
                         android:hint="Matrícula"
                         android:inputType="textPersonName"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
                 </LinearLayout>
 
                 <!--View Cadastro Administrador-->
@@ -160,29 +179,58 @@
 
                     <EditText
                         android:id="@+id/ocupacaoID"
-                        style="@style/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
                         android:hint="Ocupação"
                         android:inputType="textPersonName"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:id="@+id/atividadeRespID"
-                        style="@style/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
                         android:hint="Atividade de sua responsabilidade"
                         android:inputType="textPersonName"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
                 </LinearLayout>
             </LinearLayout>
 
 
+            <GridLayout
+                android:id="@+id/gridLayoutID"
+                android:layout_width="273dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+
+                <Button
+                    android:id="@+id/botaoVoltarID"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="Voltar" />
+
+                <Button
+                    android:id="@+id/botaoCadastrarID"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+
+
+                    android:text="Cadastrar" />
+
+            </GridLayout>
+
             <TextView
                 android:id="@+id/erroCadastroID"
-                style="@style/mensagem_erro"/>
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_light"
+                android:visibility="invisible" />
 
-            <Button
-                android:id="@+id/botaoCadastrarID"
-                style="@style/botoes"
-                android:text="Cadastrar"/>
+
         </LinearLayout>
     </ScrollView>
 
