--- a/AppHelp/app/src/main/res/layout/activity_login.xml
+++ b/AppHelp/app/src/main/res/layout/activity_login.xml
@@ -7,33 +7,50 @@
     tools:context="es.inatel.br.apphelp.control.LoginActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:orientation="vertical">
 
             <TextView
-                style="@style/textViewCabecalho"
-                android:text="Login"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textAlignment="center"
+                android:textSize="40sp" />
 
             <EditText
                 android:id="@+id/emailLoginID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:hint="Email"
-                android:inputType="textEmailAddress"/>
+                android:inputType="textEmailAddress" />
 
             <EditText
                 android:id="@+id/senhaLoginID"
-                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:ems="10"
                 android:hint="Senha"
                 android:inputType="textPassword" />
 
             <TextView
                 android:id="@+id/erroLoginID"
-                style="@style/mensagem_erro"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_red_light"
+                android:visibility="invisible" />
 
             <RadioGroup
                 android:layout_gravity="center"
@@ -60,13 +77,25 @@
 
             <Button
                 android:id="@+id/botaoLoginID"
-                style="@style/botoes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="20dp"
                 android:text="Login" />
 
             <TextView
                 android:id="@+id/botaoCadastrarLoginID"
-                style="@style/textViewCabecalho"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="15dp"
                 android:text="Não sou cadastrado"
+                android:textAlignment="center"
                 android:textSize="18sp"/>
         </LinearLayout>
     </ScrollView>
