--- a/AppHelp/app/src/main/res/values/colors.xml
+++ b/AppHelp/app/src/main/res/values/colors.xml
@@ -10,5 +10,9 @@
     <color name="background_listView">#F5F5F5</color>
     <color name="hora">#F0F8FF</color>
 
-    <color name="erro">#FF0000</color>
+    <color name="Red">#ff0000</color>
+    <color name="White">#ffffff</color>
+    <color name="Black">#000000</color>
+    <color name="Green">#00ff00</color>
+
 </resources>
