Adapter pra planilha de horas criado

--- a/AppHelp/app/src/main/res/layout/cabecalho_tabela.xml
+++ b/AppHelp/app/src/main/res/layout/cabecalho_tabela.xml
@@ -10,11 +10,15 @@
         android:layout_height="wrap_content">
 
         <TableRow>
-
             <TextView
-                android:id="@+id/nomeID"
-                android:text="Aluno  "
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:text="Aluno"
+                android:id="@+id/alunoAtividadeID"
+                android:textAlignment="center"/>
+        </TableRow>
+
+        <TableRow>
+
 
             <TextView
                 android:id="@+id/dataID"
